samples/hello-kubernetes/config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuar
  namespace: hello-kubernetes
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: kuar
